# smartfolio

./: .bandit  .dockerignore  .editorconfig  .env.docker  .env.docker.example  .env.example  .env.production.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADMIN_DASHBOARD_SESSION_RESUME.md  AGENTS.md  AGENT_PROMPT.md  API_REFERENCE.md  AUDIT_REPORT_2025-10-19.md  AUDIT_REPORT_2025-11-22.md  AVANT_APRES_COMPARAISON.md  CCS_DEBUG_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DUPLICATE_CODE_CONSOLIDATION.md  Dockerfile  Dockerfile.prod  ENHANCEMENTS_SUMMARY.md  FRED_INTEGRATION_SUMMARY.md  GEMINI.md  GUIDE_IA.md  LICENSE  MULTI_CURRENCY_SUMMARY.md  MULTI_TENANT_SOURCE_FIX_REPORT.md  Makefile  NEXT_SESSION.md  NEXT_SESSION_PROMPT.md  (+164 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
adapters/: banks_adapter.py  crypto_adapter.py  saxo_adapter.py
api/: admin_router.py  advanced_analytics_endpoints.py  advanced_rebalancing_endpoints.py  advanced_risk_endpoints.py  ai_chat_router.py  alerts_endpoints.py  analytics_endpoints.py  auth_router.py  backtesting_endpoints.py  coingecko_proxy_router.py  config_router.py  crypto_toolbox_endpoints.py  csv_endpoints.py  debug_router.py  deps.py  di_backtest_endpoints.py  exception_handlers.py  exceptions.py  execution_dashboard.py  execution_endpoints.py  execution_history.py  fx_endpoints.py  health_router.py  intelligence_endpoints.py  kraken_endpoints.py  main.py  market_endpoints.py  middleware.py  middleware_setup.py  ml_bourse_endpoints.py  ml_crypto_endpoints.py  ml_endpoints.py  ml_predictions_endpoints.py  models.py  monitoring_advanced.py  monitoring_endpoints.py  morning_brief_endpoints.py  multi_asset_endpoints.py  notification_endpoints.py  performance_endpoints.py  (+29 more)
config/: __init__.py  alerts_rules.json  score_registry.json  secrets_example.json  settings.py  strategy_templates.json  ttl_config.py  universe.json  users.json  users.py
connectors/: coingecko.py  cointracking.py  cointracking_api.py  kraken_api.py  saxo_api.py  saxo_import.py
constants/: __init__.py  app_constants.py  exchanges.py
coverage/: coverage-final.json  index.html
data/: alerts.json  bench_high_risk.txt  bench_low_risk.txt  bench_medium_risk.txt  id_overrides.json  portfolio_history.json  prices.json  rebalance_history.json  taxonomy.json  taxonomy_aliases.json
debug/: README.md
deploy/: README.md  kubernetes.yml
docker/: Dockerfile  docker-compose.yml
docs/: ADMIN_DASHBOARD.md  AI_CHAT_CONTEXT_FIXES.md  AI_CHAT_CONTEXT_FIXES_SESSION_4.md  AI_CHAT_GLOBAL.md  AI_CHAT_GROQ.md  AI_CHAT_QUICK_TEST.md  ALLOCATION_ENGINE_V2.md  ANALYTICS_PLAYGROUND_SPEC.md  API_REFERENCE.md  AUDIT_RESPONSE.md  AUTHENTICATION.md  BACKTEST_5_YEARS_RATIONALE.md  BOURSE_RISK_ANALYTICS_SPEC.md  BOURSE_RISK_OVERVIEW.md  BTC_HYBRID_REGIME_DETECTOR.md  BTC_REGIME_DETECTOR_WORK.md  BUGS_TO_FIX_NEXT.md  CACHE_TTL_OPTIMIZATION.md  CAP_MONITORING_GUIDE.md  CAP_OSCILLATION_ANALYSIS.md  CAP_STABILITY_FIX.md  CHART_ABSTRACTION_GUIDE.md  CLEANUP_LEGACY_SOURCES_OCT_2025.md  COLOR_AUDIT_ISSUES.md  CONSOLE_LOG_CLEANUP_OCT_2025.md  CONTRIBUTING.md  CRYPTO_TOOLBOX.md  CRYPTO_TOOLBOX_PARITY.md  CYCLE_PREDICTION_SYSTEM.md  CYCLE_PRESETS_INTEGRATION.md  CYCLE_SYSTEM_IMPROVEMENTS_JAN_2026.md  DASHBOARD_V2.md  DECISION_INDEX_V2.md  DESIGN_SYSTEM.md  DEV_TO_PROD_CHECKLIST.md  DI_BACKTEST_MODULE.md  DI_HISTORY_SYSTEM.md  DOCKER_DEPLOYMENT.md  DYNAMIC_KNOWLEDGE_BASE.md  E2E_TESTING_GUIDE.md  (+151 more)
models/: registry.json  wealth.py
patches/: fix_governance_apply_manual.patch  fix_risk_freeze.patch  fix_sim_header_alignment.patch  wealth_saxo_fix.patch
scripts/: README_SNAPSHOTS.md  backfill_wallet_history.py  backup_all.ps1  benchmark_portfolios.py  build-docker.sh  check_production_health.sh  clear_ml_cache.py  consolidate_user_config.py  daily_snapshot.ps1  debug_low_risk_expected.js  debug_real_current_values.js  debug_stables_calculation.js  deploy-aws.sh  docker-cleanup.sh  download_by_importance.py  download_historical_data.py  fix_encoding.py  init_price_history.py  lighthouse-audit.js  lint.py  migrate_portfolio_history.py  pnl_snapshot.py  refactor_exceptions.py  restore_backup.ps1  reverse_engineer_66pct.js  run_ml_tests.py  setup_backup_task.ps1  setup_daily_snapshot_task.ps1  test_risk_semantics_modes.js  (+6 more)
(+1459 files in other folders)
