[tool.pytest.ini_options]
# Test paths
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage options
addopts = [
    "--cov=services",
    "--cov=api",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=50",  # Baseline: 50% (objectif audit: 55%+)
    "-v",
    "--tb=short",
]

# Ignore patterns
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "archive",
    "data",
    "logs",
    "htmlcov",
    "__pycache__",
]

# Markers (custom test markers)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfolio"
version = "2.0.0"
description = "SmartFolio - Crypto & Bourse Portfolio Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

# Linting with ruff
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "archive",
    "data",
    "logs",
    "htmlcov",
    "node_modules",
    "__pycache__",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-too-long (handled by black)
    "E402",  # module-level-import-not-at-top (common in dynamic imports)
    "W291",  # trailing-whitespace (handled by pre-commit hooks)
    "W292",  # missing-newline-at-end-of-file (handled by pre-commit hooks)
    "W293",  # blank-line-with-whitespace (handled by pre-commit hooks)
    "F401",  # unused-import (too many false positives with re-exports)
    "F541",  # f-string-missing-placeholders (intentional in log formats)
    "F841",  # unused-variable (cleanup backlog)
]

# Code formatting with black
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | archive
  | data
  | logs
  | htmlcov
  | node_modules
  | __pycache__
)/
'''

# Import sorting with isort
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".venv/*",
    "venv/*",
    "archive/*",
    "data/*",
    "logs/*",
    "htmlcov/*",
    "node_modules/*",
]
